# specs/api.yaml
@@ -195,12 +195,12 @@ components:
       required:
         - id
         - type
-        #!- createdDateTime
-        #!- lastModifiedDateTime
+        #!- createdAt
+        #!- lastModifiedAt
         #!- changeKey
         #!- categories # array
-        - received_date_time
-        - sent_date_time
+        - received_at
+        - sent_at
         - has_attachments # boolean
         - internet_message_id
         - subject
@@ -226,10 +226,10 @@ components:
           type: 'string'
         type:
           type: 'string'
-        received_date_time:
+        received_at:
           type: 'string'
           format: 'date-time'
-        sent_date_time:
+        sent_at:
           type: 'string'
           format: 'date-time'
         has_attachments: # boolean
